--- a/phrasebook/index.html
+++ b/phrasebook/index.html
@@ -2,7 +2,7 @@
 <head>
 
 <!-- DataTables CSS -->
-<link rel="stylesheet" type="text/css" href="/DataTables-1.10.9/media/css/jquery.dataTables.css">
+<link rel="stylesheet" type="text/css" href="js/DataTables-1.10.9/media/css/jquery.dataTables.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
   
 <!-- jQuery -->
