--- a/phrasebook/index.html
+++ b/phrasebook/index.html
@@ -6,10 +6,10 @@
 <link rel="stylesheet" type="text/css" href="css/main.css">
   
 <!-- jQuery -->
-<script type="text/javascript" charset="utf8" src="/DataTables-1.10.9/media/js/jquery.js"></script>
+<script type="text/javascript" charset="utf8" src="js/DataTables-1.10.9/media/js/jquery.js"></script>
   
 <!-- DataTables -->
-<script type="text/javascript" charset="utf8" src="/DataTables-1.10.9/media/js/jquery.dataTables.js"></script>
+<script type="text/javascript" charset="utf8" src="js/DataTables-1.10.9/media/js/jquery.dataTables.js"></script>
 
 <!-- data-->
 <script type="text/javascript" charset="utf8" src="js/util.js"></script>
